--- a/src/components/contact/contact.css
+++ b/src/components/contact/contact.css
@@ -71,6 +71,11 @@ textarea {
   padding-left: 10px;
 }
 
+input:focus,
+textarea:focus {
+  outline: none;
+}
+
 button {
   border: none;
   padding: 15px;
@@ -78,4 +83,47 @@ button {
   color: white;
   font-weight: 500;
   cursor: pointer;
+}
+
+@media screen and (max-width: 480px) {
+  .c-wrapper {
+    flex-direction: column;
+    padding: 0 50px;
+  }
+
+  .c-title {
+    font-size: 30px;
+  }
+
+  .c-info-item {
+    margin: 20px 0px;
+    width: 100%;
+  }
+
+  .c-desc {
+    display: none;
+  }
+
+  form {
+    margin-top: 0px;
+    display: flex;
+    flex-wrap: wrap;
+  }
+
+  input {
+    width: 100%;
+    height: 40px;
+    margin: 10px;
+    margin-left: 0;
+  }
+
+  textarea {
+    margin: 10px;
+    margin-left: 0;
+  }
+
+  button {
+    margin-top: 10px;
+    width: 100%;
+  }
 }
